2004-07-16 Vladimir Hirsl
	1. Implementation of HP-UX SOM binary parser.
                                                                                                                             
	* utils/org/eclipse/cdt/utils/som/AR.java
	* utils/org/eclipse/cdt/utils/som/SOM.java
                                                                                                                             
	* utils/org/eclipse/cdt/utils/som/parser/ARMember.java
	* utils/org/eclipse/cdt/utils/som/parser/BinaryArchive.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMParser.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMBinaryObject.java
	* utils/org/eclipse/cdt/utils/som/parser/SomSymbol.java
                                                                                                                             
	2. Fixed a slight ommision in XXXBinaryObject classes
                                                                                                                             
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java
	* utils/org/eclipse/cdt/utils/elf/parser/GNUElfBinaryObject.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFFBinaryObject.java

2004-07-15 Alain Magloire

	Check for Empty path in the binary and copy the []IPathEntry
	for the manager.

	* model/org/eclipse/cdt/internal/core/model/Binary.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2004-07-15 Chris Wiebe

	Initial draft for the type hierarchy view.
	* browser/*

2004-07-06 Bogdan Gheorghe
	Handled the case of CContainer in both updateIndexAddResource and
	updateIndexRemoveResource.
	
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
	
	
2004-07-06 Hoda Amer
	Fix for PR 68933 : [Content Assist] removes asterisks from parameter prompt
	
2004-6-29 Alain Magloire

	Extend on the fix by Bogdan PR 67656 and
	do not get the children for ADDED/REMOVE case
